--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "body": "^5.1.0",
     "express": "^4.13.3",
     "socket.io": "^1.3.7"
   }
